[tool.poetry]
name = "altbrains"
version = "0.1.0"
description = ""
authors = ["quillahava <voyt.to.work@ya.ru>"]
readme = "README.md"
packages = [{include = "get_extra_lib"}]

[tool.poetry.dependencies]
python = "^3.9.16"
argparse = "^1.4.0"
requests = "^2.31.0"
packaging = "^23.1"
pydantic = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
